# ariadne

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/product/: business-rules.md  configuration-contract.md  distribution-targets.md  export-contract.md  glossary.md  non-functional-requirements.md  product-contract.md  use-cases.md
